# hulkompiler

./: Cargo.toml  README.md
examples/: 02-basic-arithmetic.hk  03-var-use.hk  04-var-decl.hk  05-var-decl-complex.hk  06-fun-decl.hk  07-conditionals.hk  08-conditional-more-complex.hk  09-reassign.hk  10-while-loop.hk
hulkompiler/: Cargo.toml
hulkompiler-ast/: Cargo.toml
hulkompiler-ast/src/: expr.rs  lex.rs  lib.rs
hulkompiler-emit-cpp/: Cargo.toml  std.cpp
hulkompiler-emit-cpp/src/: lib.rs
hulkompiler-emit-py/: Cargo.toml
hulkompiler-emit-py/src/: lib.rs
hulkompiler-hir/: Cargo.toml
hulkompiler-hir/src/: expr.rs  lib.rs  ops.rs  scope.rs  ty.rs  unit.rs
hulkompiler-sourcehint/: Cargo.toml
hulkompiler-sourcehint/src/: lib.rs
hulkompiler/src/: args.rs  ast.rs  hir.rs  lex.rs  lib.rs  main.rs  sourcehint.rs
hulkompiler/src/emit/: mod.rs  py.rs
